# djangox-website-29

./: .gitignore  db.sqlite3  pyproject.toml
bigsnacks/: apps.py  models.py  views.py
bigsnacks/migrations/: 0001_initial.py
config/: settings.py  urls.py
pages/migrations/: 0001_initial.py  0002_delete_snack.py
templates/: snack-create.html  snack-delete.html  snack-detail.html  snack-list.html  snack-update.html
